--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
   padding: 15px;
 }
 
+h1 {
+  margin-bottom: 25px;
+}
+
+main{
+  max-width: 1440px;
+  margin: auto;
+}
+
 /* Header */
 
 header {
@@ -50,10 +59,6 @@ footer {
 
 #index {
   main {
-    h1 {
-      margin-bottom: 25px;
-    }
-
     p {
       margin-bottom: 15px;
     }
